welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:8: error: not found: value isFacingTrain
      if (isFacingTrain==true){
          ^